tests/NormalTests/paczka1/small_fuzzy/49910541.err
Error in line 5: fZ9xxJ2Pw0 A305 -2,2
Error in line 8: A305 A792 64,5
Error in line 9: A305 S4 75,8
Error in line 3: fZ9xxJ2Pw0 A305 90,6
